force-app/main/default/objects/Bid__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <description>This is used by the HL_Mass_Bid apex class to be able to create a blank bid object with only a company name associated for population later.  This will not be displayed on the default bid layout.</description>
    <label>CompanyName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>