force-app/main/default/objects/Bid__c/fields/Debt__c.field-meta.xml
<CustomField>
    <fullName>Debt__c</fullName>
    <label>Debt %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>