force-app/main/default/objects/Bid__c/fields/Engagement_Counterparty__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Counterparty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Counterparty</label>
    <referenceTo>Engagement_Counterparty__c</referenceTo>
    <relationshipLabel>Bids</relationshipLabel>
    <relationshipName>Bids</relationshipName>
    <type>Lookup</type>
</CustomField>