force-app/main/default/objects/Bid__c/fields/Equity__c.field-meta.xml
<CustomField>
    <fullName>Equity__c</fullName>
    <label>Equity %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>