force-app/main/default/objects/Bid__c/fields/Face_Value_Bid__c.field-meta.xml
<CustomField>
    <fullName>Face_Value_Bid__c</fullName>
    <label>Face Value Bid (MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>