force-app/main/default/objects/Bid__c/fields/Face_Value_MM_High__c.field-meta.xml
<CustomField>
    <fullName>Face_Value_MM_High__c</fullName>
    <inlineHelpText>Purchase Price as a % of Face Value (MM)-High</inlineHelpText>
    <label>Face Value (MM)-High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>