force-app/main/default/objects/Bid__c/fields/Face_Value_MM_Low__c.field-meta.xml
<CustomField>
    <fullName>Face_Value_MM_Low__c</fullName>
    <description>Purchase Price as a % of Face Value (MM)-Low</description>
    <label>Face Value (MM)-Low</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>