force-app/main/default/objects/Bid__c/fields/Joint_Bidder_02__c.field-meta.xml
<CustomField>
    <fullName>Joint_Bidder_02__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to store the additional joint bidders from Capital Source</description>
    <inlineHelpText>Save the Bid Record before Adding a Joint Bidder</inlineHelpText>
    <label>Joint Bidder 02</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Engagement_Counterparty__c.Engagement__c</field>
            <operation>equals</operation>
            <valueField>$Source.Engagement__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Engagement_Counterparty__c</referenceTo>
    <relationshipLabel>Bids (Additional Joint Bidder)</relationshipLabel>
    <relationshipName>Bids2</relationshipName>
    <type>Lookup</type>
</CustomField>