force-app/main/default/objects/Bid__c/fields/Net_Asset_Value_Bid__c.field-meta.xml
<CustomField>
    <fullName>Net_Asset_Value_Bid__c</fullName>
    <label>Net Asset Value Bid (MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>