force-app/main/default/objects/Bid__c/fields/Net_Asset_Value_MM_High__c.field-meta.xml
<CustomField>
    <fullName>Net_Asset_Value_MM_High__c</fullName>
    <inlineHelpText>Purchase Price as a % of Net Asset Value (MM)-High</inlineHelpText>
    <label>Net Asset Value (MM)-High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>