force-app/main/default/objects/Bid__c/fields/Report_Counterparty_Company_Fields__c.field-meta.xml
<CustomField>
    <fullName>Report_Counterparty_Company_Fields__c</fullName>
    <description>For reporting only 
0 = Name 
1 = Street 
2 = City 
3 = State 
4 = Postal Code 
5 = Billing Country 
6 = Phone 
7 = Fax 
8 = Website</description>
    <formula>Engagement_Counterparty__r.Report_Counterparty_Company_Fields__c</formula>
    <label>Report_Counterparty_Company_Fields</label>
    <type>Text</type>
</CustomField>