force-app/main/default/objects/Bid__c/fields/Round_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Round_Minimum__c</fullName>
    <label>Round Minimum (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>