force-app/main/default/objects/Bid__c/recordTypes/IFA_Bid.recordType-meta.xml
<RecordType>
    <fullName>IFA_Bid</fullName>
    <active>true</active>
    <label>IFA Bid</label>
</RecordType>