force-app/main/default/objects/Bid__c/recordTypes/M_A_Bid.recordType-meta.xml
<RecordType>
    <fullName>M_A_Bid</fullName>
    <active>true</active>
    <label>M&amp;A Bid</label>
</RecordType>